@@ -1,3 +1,8 @@
+version 2015122006
+
+Add support for Privacy API
+Compatible with Boost 3.5 theme
+
 version 20151220
 
 Enable better compatibility with htmlplus plugin. htmlplus window is
